# sim2real

./: README.md  pyproject.toml
config/robot/: g1-real.yaml  g1.yaml
config/scene/: g1_29dof_rubberhand-ball.yaml  g1_29dof_rubberhand-bread_box.yaml  g1_29dof_rubberhand-door.yaml  g1_29dof_rubberhand-foam.yaml  g1_29dof_rubberhand-stair.yaml  g1_29dof_rubberhand-stool.yaml  g1_29dof_rubberhand-suitcase.yaml
data/objects/ball/: ball.xml
data/objects/box/: box.xml
data/objects/door/: door-freebase.xml  door-opened.xml  door.xml
data/objects/foam/: foam.xml  foam_with_support.xml
data/objects/stair/: stair.xml
data/objects/stool/: stool.xml  stool_with_support.xml
data/objects/suitcase/: suitcase.xml
data/robots/g1/: g1_29dof_rubberhand-ball.xml  g1_29dof_rubberhand-bread_box.xml  g1_29dof_rubberhand-door-freebase.xml  g1_29dof_rubberhand-door.xml  g1_29dof_rubberhand-foam.xml  g1_29dof_rubberhand-foam_with_support.xml  g1_29dof_rubberhand-stair.xml  g1_29dof_rubberhand-stool.xml  g1_29dof_rubberhand-suitcase.xml
rl_policy/: base_policy.py  box_transport.py  tracking.py
rl_policy/observations/: box_transport.py  common.py  motion.py  object.py
rl_policy/utils/: state_processor.py
sim_env/utils/: unitree_sdk2py_bridge.py
utils/: common.py  math.py
